--- a/snapshot.html
+++ b/snapshot.html
@@ -15,6 +15,6 @@
 </ul>
 <img id="placeloader" src="images/QQ截图20180906120700.png" alt="hello world">
 <script src="showPic.js"></script>
-<p id="description">Choose an image1-1-1.</p>
+<p id="description">Choose an image1733.</p>
 </body>
 </html>
