--- a/snapshot.html
+++ b/snapshot.html
@@ -9,7 +9,7 @@
 <h1>Snapshot</h1>
 <ul>
     <li>
-    <a href="images/fireworks.png" title="A imgurl firework" onclick="showPic(this);return false;">fire work</a>
+    <a href="images/fireworks.png" title="A imgurl firework" onclick="showPic(this);countBodyChildren();return false;">fire work</a>
     </li>
 
 </ul>
