--- a/snapshot.html
+++ b/snapshot.html
@@ -9,12 +9,12 @@
 <h1>Snapshot</h1>
 <ul>
     <li>
-    <a href="images/fireworks.png" title="A imgurl firework" onclick="showPic(this);countBodyChildren();return false;">fire work</a>
+    <a href="images/fireworks.png" title="A imgurl firework" onclick="showPicText(this);countBodyChildren();return false;">fire work</a>
     </li>
 
 </ul>
 <img id="placeloader" src="images/QQ截图20180906120700.png" alt="hello world">
 <script src="showPic.js"></script>
-<p id="description">Choose an image184912.</p>
+<p id="description">Choose an image11</p>
 </body>
 </html>
